--- a/manifests/kots-config.yaml
+++ b/manifests/kots-config.yaml
@@ -2,39 +2,80 @@
 apiVersion: kots.io/v1beta1
 kind: Config
 metadata:
-  name: config-sample
+  name: concourse
 spec:
   groups:
-  - name: example_settings
-    title: My Example Config
-    description: Configuration to serve as an example for creating your own. See [https://kots.io/reference/v1beta1/config/](https://kots.io/reference/v1beta1/config/) for configuration docs. In this case, we provide example fields for configuring an Nginx welcome page.
+  - name: concourse
+    title: Concourse Configuration
+    description: High-level parameters for Concourse
     items:
-    - name: show_text_inputs
-      title: Customize Text Inputs
-      help_text: "Show custom user text inputs"
+    - name: fqdn
+      title: Host
+      help_text: "The fully qualifed domain name for the concourse instance"
+      type: text
+      recommended: true
+      default: "concourse.local"
+  - name: Database
+    title: Database Configuration
+    description: Configurations the datastores for Concourse 
+    items:
+    - name: postgres_type
+      type: select_one
+      title: Postgres
+      default: embedded_postgres
+      items:
+        - name: embedded_postgres
+          title: Embedded Postgres
+        - name: external_postgres
+          title: External Postgres
+    - name: embedded_postgres_username
+      title: Postgres Username
+      help_text: "Username for the embedded postgres database"	
+      type: text
+      value: concourse
+      when: false
+    - name: embedded_postgres_password
+      title: Postgres Password
+      help_text: "Password for the embedded postgres database"	
+      type: password
+      value: repl{{ RandomString 32 }}
+    - name: embedded_postgres_database
+      title: Postgres Database
+      help_text: "Database name for the embedded postgres database"	
+      type: text
+      value: concourse
+      when: false
+    - name: external_postgres_host
+      title: Postgres Host
+      when: '{{repl ConfigOptionEquals "postgres_type" "external_postgres"}}'
+      type: text
+      default: postgres
+    - name: external_postgres_port
+      title: Postgres Port
+      when: '{{repl ConfigOptionEquals "postgres_type" "external_postgres"}}'
+      type: text
+      default: "5432"
+    - name: external_postgres_tls
+      title: Use TLS?
+      when: '{{repl ConfigOptionEquals "postgres_type" "external_postgres"}}'
       type: bool
       default: "0"
-      recommended: true
-    - name: example_default_value
-      title: Text Example (with default value)
+    - name: external_postgres_ca_cert
+      title: TLS CA Certificate
+      when: '{{repl ConfigOptionEquals "external_postgres_tls" "1"}}'
+      type: file 
+    - name: external_postgres_username
+      title: Postgres Username
+      when: '{{repl ConfigOptionEquals "postgres_type" "external_postgres"}}'
       type: text
-      value: ""
-      default: please change this value
-      when: repl{{ ConfigOptionEquals "show_text_inputs" "1" }}
-    - name: api_token
-      title: API token
+      required: true
+    - name: external_postgres_password
+      title: Postgres Password
+      when: '{{repl ConfigOptionEquals "postgres_type" "external_postgres"}}'
       type: password
-      props:
-        rows: 5
-      when: repl{{ ConfigOptionEquals "show_text_inputs" "1" }}
-    - name: readonly_text_left
-      title: Readonly Text
+      required: true
+    - name: external_postgres_database
+      title: Postgres Database
+      when: '{{repl ConfigOptionEquals "postgres_type" "external_postgres"}}'
       type: text
-      value: "{{repl RandomString 10}}"
-      readonly: true
-      when: repl{{ ConfigOptionEquals "show_text_inputs" "1" }}
-    - name: hidden_text
-      title: Secret Key
-      type: password
-      hidden: true
-      value: "{{repl RandomString 40}}"
+      default: concourse
