Implements app objects

--- a/manifests/k8s-app.yaml
+++ b/manifests/k8s-app.yaml
@@ -1,10 +1,7 @@
 apiVersion: app.k8s.io/v1beta1
 kind: Application
 metadata:
-  name: "nginx"
+  name: concourse
 spec:
   descriptor:
-    links:
-      - description: Open App
-        # needs to match applicationUrl in kots-app.yaml
-        url: "http://nginx"
+    links: []
